jenkins-master/jenkins-service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-web-ui
  namespace: ci
  labels:
    app: jenkins
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: web-ui
    - port: 50000
      targetPort: 50000
      name: agent
  selector:
    app: jenkins
    tier: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-web-ui
  namespace: ci
spec:
  rules:
  - host: jenkins.com
    http:
      paths:
      - backend:
          serviceName: jenkins-web-ui
          servicePort: 8080
